--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "mongoose": "^6.0.0",
     "nodemon": "^2.0.12"
   }
 }
